--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         alt="Imagem de Do Daniel"
       />
       <h1>Daniel Aroucha</h1>
-      <p>A Junior Developer</p>
+      <p>Junior Developer</p>
       <ul>
         <li>
           <a href="https://github.com/NeroSzS" target="_blank">
