--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         alt="Imagem de Do Daniel"
       />
       <h1>Daniel Aroucha</h1>
-      <p>I'm a Systems Analysis and Development Student</p>
+      <p>Sou um Estudante de Analise e Desenvolvimento de Sistemas</p>
       <ul>
         <li>
           <a href="https://github.com/NeroSzS" target="_blank">
