--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </ul>
 
       <footer>
-        Feito por
+        &copy;
         <a href="https://wa.me/5598987360868" target="_blank">Daniel</a>
       </footer>
     </div>
